# InfoSec-Kafka-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
consumer/: consumer.py
producer/: producer.py
src/consumer/: consumer.py
src/schemas/: schema.yml  schema_extra_test.yml
tests/: docker-compose.yml  regex_check.py  regex_manual_check.py  test_is_valid_log.py  test_parse_log.py  test_schema_validation.py  test_service_conn.py
