[project]
name = "streaming-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"


[tool.uv.dependencies]
confluent_kafka = "2.8.0"
psycopg2_binary = "2.9.10"
pytest = "8.3.4"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
watchdog = "6.0.0"
